@@ -440,7 +440,6 @@ enum {
   SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_STRING,
   SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_CLASS,
   SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_INTERFACE,
-  SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_CALLBACK,
   SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_ANY_OBJECT,
 };
 
