@@ -317,7 +317,6 @@ enum {
   SPVM_OPCODE_C_ID_SET_FIELD_OBJECT,
   SPVM_OPCODE_C_ID_SET_FIELD_UNDEF,
   SPVM_OPCODE_C_ID_IS_TYPE,
-  SPVM_OPCODE_C_ID_HAS_CALLBACK,
   SPVM_OPCODE_C_ID_HAS_INTERFACE,
   SPVM_OPCODE_C_ID_HAS_IMPLEMENT,
   SPVM_OPCODE_C_ID_ENTER_SCOPE,
