@@ -421,7 +421,6 @@ int32_t SPVM_API_RUNTIME_get_type_is_object(SPVM_RUNTIME* runtime, int32_t type_
       case SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_STRING:
       case SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_CLASS:
       case SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_INTERFACE:
-      case SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_CALLBACK:
       case SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_ANY_OBJECT:
       {
         is_object = 1;
