@@ -317,7 +317,6 @@ const char* const* SPVM_OPCODE_C_ID_NAMES(void) {
     "SET_FIELD_OBJECT",
     "SET_FIELD_UNDEF",
     "IS_TYPE",
-    "HAS_CALLBACK",
     "HAS_INTERFACE",
     "HAS_IMPLEMENT",
     "ENTER_SCOPE",
@@ -338,9 +337,9 @@ const char* const* SPVM_OPCODE_C_ID_NAMES(void) {
     "PUSH_ARG_MULNUM_LONG",
     "PUSH_ARG_MULNUM_FLOAT",
     "PUSH_ARG_MULNUM_DOUBLE",
-    "CALL_CLASS_METHOD",
-    "CALL_INSTANCE_METHOD",
-    "CALL_CALLBACK_METHOD",
+    "CALL_CLASS_METHOD_BY_ID",
+    "CALL_INSTANCE_METHOD_BY_ID",
+    "CALL_INSTANCE_METHOD_BY_SIGNATURE",
     "GET_ARG_BYTE",
     "GET_ARG_SHORT",
     "GET_ARG_INT",
