@@ -644,9 +644,6 @@ int32_t SPVM_TYPE_is_basic_object_type(SPVM_COMPILER* compiler, int32_t basic_ty
   else if (SPVM_TYPE_is_class_type(compiler, basic_type_id, dimension, flag)) {
     return 1;
   }
-  else if (SPVM_TYPE_is_callback_type(compiler, basic_type_id, dimension, flag)) {
-    return 1;
-  }
   else if (SPVM_TYPE_is_interface_type(compiler, basic_type_id, dimension, flag)) {
     return 1;
   }
@@ -726,22 +723,6 @@ int32_t SPVM_TYPE_is_not_found_class_type(SPVM_COMPILER* compiler, int32_t basic
   }
   
   return is_not_found_class_type;
-}
-
-int32_t SPVM_TYPE_is_callback_type(SPVM_COMPILER* compiler, int32_t basic_type_id, int32_t dimension, int32_t flag) {
-  (void)compiler;
-  
-  int32_t is_callback_type;
-  int32_t basic_type_is_callback_type = SPVM_BASIC_TYPE_is_callback_type(compiler, basic_type_id);
-  if (dimension == 0 && basic_type_is_callback_type && !(flag & SPVM_TYPE_C_FLAG_REF)) {
-    is_callback_type = 1;
-  }
-  // Array
-  else {
-    is_callback_type = 0;
-  }
-  
-  return is_callback_type;
 }
 
 int32_t SPVM_TYPE_is_interface_type(SPVM_COMPILER* compiler, int32_t basic_type_id, int32_t dimension, int32_t flag) {
@@ -838,22 +819,6 @@ int32_t SPVM_TYPE_is_interface_array_type(SPVM_COMPILER* compiler, int32_t basic
   }
   
   return is_interface_array_type;
-}
-
-int32_t SPVM_TYPE_is_callback_array_type(SPVM_COMPILER* compiler, int32_t basic_type_id, int32_t dimension, int32_t flag) {
-  (void)compiler;
-  
-  int32_t is_callback_array_type;
-  int32_t basic_type_is_callback_type = SPVM_BASIC_TYPE_is_callback_type(compiler, basic_type_id);
-  if (dimension == 1 && basic_type_is_callback_type && !(flag & SPVM_TYPE_C_FLAG_REF)) {
-    is_callback_array_type = 1;
-  }
-  // Array
-  else {
-    is_callback_array_type = 0;
-  }
-  
-  return is_callback_array_type;
 }
 
 int32_t SPVM_TYPE_is_muldim_array_type(SPVM_COMPILER* compiler, int32_t basic_type_id, int32_t dimension, int32_t flag) {
@@ -1222,28 +1187,6 @@ int32_t SPVM_TYPE_check_assignability(
       assignability = 0;
     }
   }
-  // Dist type is callback
-  else if (SPVM_TYPE_is_callback_type(compiler, dist_type_basic_type_id, dist_type_dimension, dist_type_flag)) {
-    if (SPVM_TYPE_is_basic_object_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      if (dist_type_basic_type_id == src_type_basic_type_id && dist_type_dimension == src_type_dimension) {
-        assignability = 1;
-      }
-      else {
-        if (SPVM_TYPE_is_class_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-          assignability = SPVM_BASIC_TYPE_has_callback(compiler, src_type_basic_type_id, dist_type_basic_type_id);
-        }
-        else {
-          assignability = 0;
-        }
-      }
-    }
-    else if (SPVM_TYPE_is_undef_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      assignability = 1;
-    }
-    else {
-      assignability = 0;
-    }
-  }
   // Dist type is any object type
   else if (SPVM_TYPE_is_any_object_type(compiler, dist_type_basic_type_id, dist_type_dimension, dist_type_flag)) {
     // Source type is object type
@@ -1348,22 +1291,6 @@ int32_t SPVM_TYPE_check_assignability(
       assignability = 0;
     }
   }
-  // Dist type is callback array type
-  else if (SPVM_TYPE_is_callback_array_type(compiler, dist_type_basic_type_id, dist_type_dimension, dist_type_flag)) {
-    if (dist_type_basic_type_id == src_type_basic_type_id && dist_type_dimension == src_type_dimension) {
-      assignability = 1;
-    }
-    else if (SPVM_TYPE_is_class_array_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      assignability = SPVM_BASIC_TYPE_has_callback(compiler, src_type_basic_type_id, dist_type_basic_type_id);
-    }
-    // Source type is undef type
-    else if (SPVM_TYPE_is_undef_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      assignability = 1;
-    }
-    else {
-      assignability = 0;
-    }
-  }
   // Dist type is any object array(object[])
   else if (SPVM_TYPE_is_any_object_array_type(compiler, dist_type_basic_type_id, dist_type_dimension, dist_type_flag)) {
     
@@ -1389,14 +1316,6 @@ int32_t SPVM_TYPE_check_assignability(
           if (SPVM_BASIC_TYPE_is_interface_type(compiler, dist_type_basic_type_id)) {
             if (SPVM_BASIC_TYPE_is_class_type(compiler, src_type_basic_type_id)) {
               assignability = SPVM_BASIC_TYPE_has_interface(compiler, src_type_basic_type_id, dist_type_basic_type_id);
-            }
-            else {
-              assignability = 0;
-            }
-          }
-          else if (SPVM_BASIC_TYPE_is_callback_type(compiler, dist_type_basic_type_id)) {
-            if (SPVM_BASIC_TYPE_is_class_type(compiler, src_type_basic_type_id)) {
-              assignability = SPVM_BASIC_TYPE_has_callback(compiler, src_type_basic_type_id, dist_type_basic_type_id);
             }
             else {
               assignability = 0;
@@ -1526,9 +1445,6 @@ int32_t SPVM_TYPE_check_castability(
     else if (SPVM_TYPE_is_interface_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
       castability = SPVM_BASIC_TYPE_has_interface(compiler, cast_type_basic_type_id, src_type_basic_type_id);;
     }
-    else if (SPVM_TYPE_is_callback_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = SPVM_BASIC_TYPE_has_callback(compiler, cast_type_basic_type_id, src_type_basic_type_id);;
-    }
     else if (SPVM_TYPE_is_any_object_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
       castability = 1;
     }
@@ -1545,30 +1461,6 @@ int32_t SPVM_TYPE_check_castability(
       castability = SPVM_BASIC_TYPE_has_interface(compiler, src_type_basic_type_id, cast_type_basic_type_id);
     }
     else if (SPVM_TYPE_is_interface_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = 1;
-    }
-    else if (SPVM_TYPE_is_callback_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = 1;
-    }
-    else if (SPVM_TYPE_is_any_object_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = 1;
-    }
-    else if (SPVM_TYPE_is_undef_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = 1;
-    }
-    else {
-      castability = 0;
-    }
-  }
-  // Cast type is callback type
-  else if (SPVM_TYPE_is_callback_type(compiler, cast_type_basic_type_id, cast_type_dimension, cast_type_flag)) {
-    if (SPVM_TYPE_is_class_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = SPVM_BASIC_TYPE_has_callback(compiler, src_type_basic_type_id, cast_type_basic_type_id);
-    }
-    else if (SPVM_TYPE_is_interface_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = 1;
-    }
-    else if (SPVM_TYPE_is_callback_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
       castability = 1;
     }
     else if (SPVM_TYPE_is_any_object_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
@@ -1678,9 +1570,6 @@ int32_t SPVM_TYPE_check_castability(
     else if (SPVM_TYPE_is_interface_array_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
       castability = SPVM_BASIC_TYPE_has_interface(compiler, cast_type_basic_type_id, src_type_basic_type_id);;
     }
-    else if (SPVM_TYPE_is_callback_array_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = SPVM_BASIC_TYPE_has_callback(compiler, cast_type_basic_type_id, src_type_basic_type_id);;
-    }
     else if (SPVM_TYPE_is_any_object_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
       castability = 1;
     }
@@ -1700,33 +1589,6 @@ int32_t SPVM_TYPE_check_castability(
       castability = SPVM_BASIC_TYPE_has_interface(compiler, src_type_basic_type_id, cast_type_basic_type_id);
     }
     else if (SPVM_TYPE_is_interface_array_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = 1;
-    }
-    else if (SPVM_TYPE_is_callback_array_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = 1;
-    }
-    else if (SPVM_TYPE_is_any_object_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = 1;
-    }
-    else if (SPVM_TYPE_is_any_object_array_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = 1;
-    }
-    else if (SPVM_TYPE_is_undef_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = 1;
-    }
-    else {
-      castability = 0;
-    }
-  }
-  // Cast type is callback array type
-  else if (SPVM_TYPE_is_callback_array_type(compiler, cast_type_basic_type_id, cast_type_dimension, cast_type_flag)) {
-    if (SPVM_TYPE_is_class_array_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = SPVM_BASIC_TYPE_has_callback(compiler, src_type_basic_type_id, cast_type_basic_type_id);
-    }
-    else if (SPVM_TYPE_is_interface_array_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
-      castability = 1;
-    }
-    else if (SPVM_TYPE_is_callback_array_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
       castability = 1;
     }
     else if (SPVM_TYPE_is_any_object_type(compiler, src_type_basic_type_id, src_type_dimension, src_type_flag)) {
@@ -1769,9 +1631,6 @@ int32_t SPVM_TYPE_check_castability(
             if (SPVM_BASIC_TYPE_is_interface_type(compiler, src_type_basic_type_id)) {
               castability = 1;
             }
-            else if (SPVM_BASIC_TYPE_is_callback_type(compiler, src_type_basic_type_id)) {
-              castability = 1;
-            }
             else {
               castability = 0;
             }
@@ -1781,23 +1640,6 @@ int32_t SPVM_TYPE_check_castability(
               castability = SPVM_BASIC_TYPE_has_interface(compiler, src_type_basic_type_id, cast_type_basic_type_id);
             }
             else if (SPVM_BASIC_TYPE_is_interface_type(compiler, src_type_basic_type_id)) {
-              castability = 1;
-            }
-            else if (SPVM_BASIC_TYPE_is_callback_type(compiler, src_type_basic_type_id)) {
-              castability = 1;
-            }
-            else {
-              castability = 0;
-            }
-          }
-          else if (SPVM_BASIC_TYPE_is_callback_type(compiler, cast_type_basic_type_id)) {
-            if (SPVM_BASIC_TYPE_is_class_type(compiler, src_type_basic_type_id)) {
-              castability = SPVM_BASIC_TYPE_has_callback(compiler, src_type_basic_type_id, cast_type_basic_type_id);
-            }
-            else if (SPVM_BASIC_TYPE_is_interface_type(compiler, src_type_basic_type_id)) {
-              castability = 1;
-            }
-            else if (SPVM_BASIC_TYPE_is_callback_type(compiler, src_type_basic_type_id)) {
               castability = 1;
             }
             else {
