@@ -15,6 +15,8 @@ Revision history for SPVM
         * A callback type must have one required method.
         * A class must have the required methods defined in the interface classes.
         * Remove callback_t. The feature of callback_t is merged into interface_t.
+        * Remove SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_CALLBACK
+        * Change ID of SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_ANY_OBJECT from 10 to 9
 0.9514  2022-05-02
         [CHANGE]
         * Add no_compiler_api to SPVM::Builder::Config::Exe
